--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "A Model Context Protocol (MCP) server for Sentry",
   "main": "index.ts",
   "scripts": {
+    "build": "tsc",
+    "start": "ts-node index.ts",
+    "dev": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.1",
+    "@sentry/node": "^9.4.0",
+    "@sentry/profiling-node": "^9.4.0",
     "node-fetch": "^2.6.7",
     "zod": "^3.24.2"
   },
